{{$NEXT}}

0.099     2014-01-28 12:30:49 America/Los_Angeles


      [INCOMPATIBLE CHANGES]

      - The logic that Pinto uses to construct the index has changed.   The
      index will now include packages only if they are contained in a file with a
      matching name.  For example, Foo::Bar must be in a file called Bar.pm.  So
      in effect, Pinto will only index packages that can be use'd or require'd and
      thus form a dependency.  This makes it more of a "module" index rather than
      a pure "package" index like PAUSE.  But Pinto has never promised to index
      exactly like PAUSE anyway.  The benefit is that it also fixes the problem of
      Pinto indexing packages that it shouldn't.

      - The aforementioned changes to the index logic will only apply when a
      distribution is pulled to a stack where it isn't already registered.
      Existing indexes will not spontaneously change just by upgrading Pinto.  If
      you wish to apply the new index logic to a distribution that already lives
      in a certain stack, first use the "unregister" command to remove it from
      the stack and then use the "register" command to bring it back with the
      new logic.

      [ENHANCEMENTS]

      - For repositories that prohibit intermingled distributions in the index
      (which is the default) the registration process has been optimized because we
      can assume that all packages in the distribution are in the index.  In some
      cases, this can make the "pull" and "add" commands much faster, especially
      for distributions that contain a large number of packages.

      [BUG FIXES]

      - When deciding if a prequisite is satisfied by the perl core, Pinto now
      regards a package that is marked as deprecated in the target perl version
      as if it has already been removed, thus causing Pinto to pull the prereq.
      This makes Pinto consistent with the behavior of cpanm.

0.098_01  2014-01-28 01:43:19 America/Los_Angeles
